tests/transpiler/x/scala/append_builtin.scala
// Generated by Mochi transpiler v0.10.31 on 2025-07-19 17:47:28 GMT+7
object Main {
    def main(args: Array[String]): Unit = {
        val a = List(1, 2)
        println(append(a, 3))
    }
}
